    VALGRIND_ENABLE_ADDR_ERROR_REPORTING_IN_RANGE

* Helgrind:
  - Helgrind GDB server monitor command 'info locks' giving
    the list of locks, their location, and their status.

* Callgrind:
  - callgrind_control now supports the --vgdb-prefix argument,
    which is needed if valgrind was started with this same argument.

* ==================== OTHER CHANGES ====================

* New and modified GDB server monitor features:

  - The GDB server monitor command 'v.info location <address>'
    outputs information about an address. The information produced depends
    on the tool and on the options given to valgrind.
    Possibly, the following are described: global variables, local (stack)
    variables, allocated or freed blocks, ...

  - The option "--vgdb-stop-at=event1,event2,..." allows the user
    to ask GDB server to stop before program execution, at the end
    of the program execution and on Valgrind internal errors.

  - A new monitor command "v.info stats" that shows various valgrind core and
    tool statistics.

  - A new monitor command "v.set hostvisibility" that allows GDB server
    to provide access to Valgrind internal host status/memory.

* New option --aspace-minaddr=<address> allows to (possibly) make
  use of some more memory by decreasing the default value above which
  Valgrind maps memory or solve some conflicts with system libraries
  by increasing the value.
  See user manual for details.
 
* Minor improvements in dwarf handling with --read-var-info=yes
  - Ada and C struct containing VLA do not cause a bad DIE error anymore
  - Code compiled with -ffunction-sections -fdata-sections -Wl,--gc-sections
    does not cause assert errors anymore.

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in